--- a/ChameleonCK/frmAbout.resx
+++ b/ChameleonCK/frmAbout.resx
@@ -308,7 +308,7 @@ Fuck You Want To Public License.</value>
     <value>13</value>
   </data>
   <data name="htmlLabel1.Text" xml:space="preserve">
-    <value>&lt;p style="font-size:11px;font-family:'Microsoft Sans Serif'"&gt;By DanilAstroid, aka vazhka-dolya (&lt;a href="https://www.youtube.com/channel/UCCrO_HQsasKN7Zwlp3D8UWQ"&gt;YouTube&lt;/a&gt;,&lt;br&gt;&lt;a href="https://github.com/vazhka-dolya"&gt;GitHub&lt;/a&gt;).&lt;br&gt;&lt;br&gt;Credits:&lt;br&gt;• GlitchyPSI (&lt;a href="https://glitchypsi.xyz"&gt;his website&lt;/a&gt;) — help with this&lt;br&gt;add-on.&lt;br&gt;• LiquoricePie (&lt;a href="https://bsky.app/profile/liquoricepie.bsky.social"&gt;Bluesky&lt;/a&gt;) – icon for the add-on.&lt;/p&gt;</value>
+    <value>&lt;p style="font-size:11px;font-family:'Microsoft Sans Serif'"&gt;By DanilAstroid, aka vazhka-dolya (&lt;a href="https://www.youtube.com/channel/UCCrO_HQsasKN7Zwlp3D8UWQ"&gt;YouTube&lt;/a&gt;,&lt;br&gt;&lt;a href="https://github.com/vazhka-dolya"&gt;GitHub&lt;/a&gt;).&lt;br&gt;&lt;br&gt;Credits:&lt;br&gt;• GlitchyPSI (&lt;a href="https://glitchypsi.xyz"&gt;his website&lt;/a&gt;) — help with this&lt;br&gt;add-on.&lt;br&gt;• LiquoricePie (&lt;a href="https://bsky.app/profile/liquoricepie.bsky.social"&gt;Bluesky&lt;/a&gt;) — icon for the add-on.&lt;/p&gt;</value>
   </data>
   <data name="&gt;&gt;htmlLabel1.Name" xml:space="preserve">
     <value>htmlLabel1</value>
