--- a/ChameleonCK/mainForm.ru.resx
+++ b/ChameleonCK/mainForm.ru.resx
@@ -118,14 +118,8 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="toolReadFromGame.Size" type="System.Drawing.Size, System.Drawing">
-    <value>179, 22</value>
-  </data>
-  <data name="toolReadFromGame.Text" xml:space="preserve">
-    <value>Прочитать из игры</value>
-  </data>
   <data name="optionsToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>83, 20</value>
+    <value>99, 20</value>
   </data>
   <data name="optionsToolStripMenuItem.Text" xml:space="preserve">
     <value>Параметры</value>
@@ -136,20 +130,37 @@
   <data name="aboutToolStripMenuItem.Text" xml:space="preserve">
     <value>Об адд-оне</value>
   </data>
-  <data name="menuStrip1.ToolTip" xml:space="preserve">
-    <value />
+  <data name="toolReadFromGame.Size" type="System.Drawing.Size, System.Drawing">
+    <value>205, 22</value>
   </data>
-  <data name="btnPickColor.ToolTip" xml:space="preserve">
-    <value />
+  <data name="toolReadFromGame.Text" xml:space="preserve">
+    <value>Прочитать из игры</value>
+  </data>
+  <data name="toolReadFromGame.ToolTipText" xml:space="preserve">
+    <value>Синхронизирует интерфейс с тем, что сейчас есть в СМ64.
+
+Автоматически выполняется один раз при запуске адд-она.</value>
+  </data>
+  <data name="toolStripSeparator1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>202, 6</value>
+  </data>
+  <data name="updatesToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>205, 22</value>
+  </data>
+  <data name="updatesToolStripMenuItem.Text" xml:space="preserve">
+    <value>Проверяем…</value>
+  </data>
+  <data name="updatesRefreshToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>205, 22</value>
+  </data>
+  <data name="updatesRefreshToolStripMenuItem.Text" xml:space="preserve">
+    <value>Перепроверить версию</value>
   </data>
   <data name="checkSwimming.Size" type="System.Drawing.Size, System.Drawing">
     <value>76, 17</value>
   </data>
   <data name="checkSwimming.Text" xml:space="preserve">
     <value>Плаванье</value>
-  </data>
-  <data name="checkSwimming.ToolTip" xml:space="preserve">
-    <value />
   </data>
   <data name="checkHideStage.Size" type="System.Drawing.Size, System.Drawing">
     <value>117, 17</value>
@@ -317,8 +328,5 @@
         AADw/wAA8PcAAPBnAAD4AwAA4AEAAOAHAADABwAAgAcAAIAPAACAHwAA2A8AAPwHAAD+BwAA/88AAP/f
         AAA=
 </value>
-  </data>
-  <data name="$this.ToolTip" xml:space="preserve">
-    <value />
   </data>
 </root>
